Paint elements into DOM

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
       <div class="form-btns">
         <input class="btn reset" type="reset" value="Reset"></input>
         <input class="btn submit" type="submit" value="Enviar"></input>
-        <input class="btn modify" type="button" value="Editar"></input>
       </div>
       </ul>
     </form>
+
+    <section>
+      <article>
+        <h2 class="name"></h2>
+        <p class="email"></p>
+        <p class="message"></p>
+        <p class="url"></p>
+      </article>
+    </section>
 
   </main>
   <script src="./index.js"></script>
