Add clear localStorage button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         <p class="url"></p>
       </article>
     </section>
-
+    
+    <section>
+        <input class="btn clear-ls" type="button" value="Limpiar LocalStorage"></input>
+        <!-- <button class="btn clear-ls">Limpiar LocalStorage</button> -->
+    </section>
   </main>
   <script src="./index.js"></script>
 </body>
