--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
     </section>
     
     <section>
+        <input type="text" id="contactName" name="contactName" placeholder="Nombre de la key" required>
+        <input class="btn remove-contact" type="button" value="Quitar"></input>
         <input class="btn clear-ls" type="button" value="Limpiar LocalStorage"></input>
-        <!-- <button class="btn clear-ls">Limpiar LocalStorage</button> -->
     </section>
+
   </main>
   <script src="./index.js"></script>
 </body>
