Update form funtionality

--- a/index.html
+++ b/index.html
@@ -23,31 +23,17 @@
         <label for="messge">Mensaje</label>
         <input type="text" name="messge" id="messge" placeholder="Escribe aquí tu mensaje" required>
       </li>
-      <li class="email-section">
-        <label for="url">Mensaje</label>
+      <li class="image-section">
+        <label for="url">Url de imagen</label>
         <input type="text" name="url" id="url" placeholder="URL imagen" required>
       </li>
       <div class="form-btns">
         <input class="btn reset" type="reset" value="Reset"></input>
         <input class="btn submit" type="submit" value="Enviar"></input>
+        <input class="btn clear-ls" type="button" value="Limpiar LocalStorage"></input>
       </div>
       </ul>
     </form>
-
-    <section>
-      <article>
-        <h2 class="name"></h2>
-        <p class="email"></p>
-        <p class="message"></p>
-        <p class="url"></p>
-      </article>
-    </section>
-    
-    <section>
-        <input type="text" id="contactName" name="contactName" placeholder="Nombre de la key" required>
-        <input class="btn remove-contact" type="button" value="Quitar"></input>
-        <input class="btn clear-ls" type="button" value="Limpiar LocalStorage"></input>
-    </section>
 
   </main>
   <script src="./index.js"></script>
